--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "My Cool Extension",
+  "name": "Green Cart",
   "version": "0.1",
+
+  "permissions": ["declarativeContent", "storage"],
 
   "content_scripts": [
   {
@@ -12,8 +14,19 @@
   }
   ],
 
+  "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+
   "page_action": {
     "default_popup": "popup.html",
-    "default_title": "Custom page"
+    "default_title": "Custom page",
+    "default_icon": {
+        "16": "images/get_started16.png",
+        "32": "images/get_started32.png",
+        "48": "images/get_started48.png",
+        "128": "images/get_started128.png"
+      }
   }
 }
