--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,16 @@
   "manifest_version": 2,
   "name": "greenCart",
   "description": "Know the truth behind how green the companies you are buying from really are.",
-  "version": "0.1",
+  "version": "0.2",
 
-  "permissions": ["declarativeContent", "storage"],
+  "permissions": ["declarativeContent", "storage","activeTab"],
 
   "content_scripts": [
   {
     "matches": [
-      "https://www.amazon.com/gp/cart/view.html?ref_=nav_cart"
+      "https://www.amazon.com/*"
     ],
+    "css": ["main.css"],
     "js": ["jquery-3.3.1.min.js","content.js"]
   }
   ],
