--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Know the truth behind how green the companies you are buying from really are.",
   "version": "0.2",
 
-  "permissions": ["declarativeContent", "storage", "activeTab","tabs"],
+  "permissions": ["declarativeContent", "storage"],
 
   "content_scripts": [
   {
