--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "https://www.amazon.com/*"
     ],
     "css": ["main.css"],
-    "js": ["jquery-3.3.1.min.js","content.js"]
+    "js": ["content.js"]
   }
   ],
 
