--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
   "description": "Know the truth behind how green the companies you are buying from really are.",
   "version": "0.3",
 
-  "permissions": ["declarativeContent", "storage","activeTab"],
+  "permissions": ["declarativeContent", "storage", "activeTab","tabs"],
 
   "content_scripts": [
   {
@@ -17,7 +17,7 @@
   ],
 
   "background": {
-      "scripts": ["background.js"],
+	  "page": "background.html",
       "persistent": false
     },
 
