--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "greenCart",
+  "name": "greenBasket",
   "description": "Know the truth behind how green the companies you are buying from really are.",
   "version": "0.2",
 
@@ -25,10 +25,10 @@
     "default_popup": "popup.html",
     "default_title": "Custom page",
     "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/greenBasket_icon16.png",
+        "32": "images/greenBasket_icon32.png",
+        "48": "images/greenBasket_icon48.png",
+        "128": "images/greenBasket_icon128.png"
       }
   }
 }
